Field is visible

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 	<h1>5 in a row - don't forger to use sass</h1>
-	<canvas id="gameField" height = "200" width = "200" />
-	<script type="text/javascript" src="js/vendor/bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<canvas id="gameField" />
+	<script type="text/javascript" src="content/vendor/bower_components/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="content/js/main.js"></script>
 </body>
 </html>
